--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,112 +1,10 @@
-name: CI Workflow
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-name: CI Workflow
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Checkout code
-        uses: actions/checkout@v2
-<<<<<<< HEAD
-
-
-
-
-
-
-
-
-^X
-nano .github/workflows/main.yml
-
-   name: CI Workflow
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          pytest  # Replace with your test command
-
-      - name: Deploy
-        if: github.ref == 'refs/heads/main'
-        run: |
-          echo "Deploying to production"  # Replace with your deploy command
-
-nano
-
-=======
-name : Generate Podcast Feeds
+name: Genrate Podcasts Feeds
 on: [push]
-jons:
- build:
-   run-ons: ubuntu-latest
-   steps:
-     - name: Checkout Repo
-       uses: actions/checkout@v3
-     - name: Setup Python
-       uses: actions/setup-python@v4
-       with:
-          python-version: "3.10"
-      - name: Install Dependencies
-        run: |
-          python -m pip install -upgrade pip
-          pip install pyyaml
-       - name: Run Feed Generator
-         run: python feed.py
-       - name: Push Repo
-         run: | 
-           git  config user.name github-actions
-           git config user.email github-actions@github.com
-           git add .
-           git commit -m "Modified Feed"
-           git push
->>>>>>> origin/main
-nano
-
+jobs:
+build: 
+  run-on: ubuntu-latest
+  steps:
+  -name: Checkout Repo
+   uses: action/checkout@v3
+  -name: Run Feed Generator
+   uses: Punksoul000/Podcast-generator@main
