--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,25 @@
-name: Genrate Podcasts Feeds
-on: [push]
+name: CI Pipeline
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-build: 
-  run-on: ubuntu-latest
-  steps:
-  -name: Checkout Repo
-   uses: action/checkout@v3
-  -name: Run Feed Generator
-   uses: Punksoul000/Podcast-generator@main
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: cd src && npm install
+
+      - name: Run tests
+        run: npm test
