--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    // Your dependencies can go here
+    // Add your actual dependencies here, but without comments
   },
   "devDependencies": {
-    // Your development dependencies can go here
+    // Add your dev dependencies here, but without comments
   }
 }
 
