--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "some-dependency": "^1.0.0"  
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "some-dev-dependency": "^1.0.0"  
+    "nodemon": "^3.1.7"
   }
 }
-
