--- a/action.yml
+++ b/action.yml
@@ -1,19 +1,19 @@
 name: "Podcast Generator"
-author: "Sachin Singh"  # Use a colon (:) instead of a space before it
+author: "Sachin Singh"
 description: "Generates a feed for a podcast from YAML file"
 runs:
   using: "docker"
   image: "Dockerfile"
 branding:
   icon: "git-branch"
-  color: "red"  # The quote should be double quotes, not a mix of single and double
+  color: "red"
 inputs:
   email:
-    description: "The Committer's email address"  # Use quotes for the description
+    description: "The Committer's email address"
     required: true
-    default: ${{ github.actor }}@localhost  # Ensure correct casing for `github.actor`
-  name:  # Ensure this is indented properly under `inputs`
-    description: "The committer's name"  # Use quotes for the description
+    default: "${{ github.actor }}@localhost"
+  name:
+    description: "The committer's name"
     required: true
-    default: ${{ github.actor }}  # Ensure correct casing for `github.actor`
+    default: "${{ github.actor }}"
 
